jdk17 / switch